--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home">
+   <div class="center-element ">
+        <p class="text-center">Welcome to Menu app !</p>
+   </div>
+</div>
