--- a/src/app/modules/cafe/cafe/cafe.component.html
+++ b/src/app/modules/cafe/cafe/cafe.component.html
@@ -1,1 +1,19 @@
-<h1>{{cafeName}}</h1>
+<div class="container p-3">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="cover-image">
+                <h1 class="cover-title text-center">{{gs.cafeName()}}</h1>
+            </div>
+        
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div>
+                <div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
