menu item component / category tabs / sticky navbars / spy scroll

--- a/src/app/modules/cafe/cafe/cafe.component.html
+++ b/src/app/modules/cafe/cafe/cafe.component.html
@@ -4,14 +4,22 @@
             <div class="cover-image">
                 <h1 class="cover-title text-center">{{gs.cafeName()}}</h1>
             </div>
-        
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div>
-                <div>
-                    
+            <div class="menu-container">
+                <div class="row item-group">
+                    <div class="item-group-nav-bar">
+                        <mat-tab-group class="position-absolute" (selectedTabChange)="scrollTo($event)">
+                            <mat-tab *ngFor="let menuItem of menuItemList" [label]="getLocalizationVal(menuItem.localizations)" ></mat-tab>
+                        </mat-tab-group>
+                    </div>
+                </div>
+                <div class="row m-1">
+                    <ng-container *ngFor="let menuItem of menuItemList">
+                        <app-menu-section class="app-menu-section" [id]="menuItem.id"  [menuItemList]="menuItem"></app-menu-section>
+                    </ng-container>
                 </div>
             </div>
         </div>
