--- a/src/app/modules/cafe/cafe/cafe.component.scss
+++ b/src/app/modules/cafe/cafe/cafe.component.scss
@@ -14,3 +14,24 @@
 .cover-title{
   margin-top: 74px;
 }
+
+.menu-container{
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+}
+
+.menu-item-container{
+  padding: 5px;
+  height: 200px;
+}
+
+.item-group-nav-bar{
+  height: 50px;
+}
+
+.item-group{
+  top: 50px;
+  position: sticky;
+  background-color: rgb(255, 255, 255);
+}
