--- a/src/app/shared/navbar/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="navbar-container">
   <nav class="navbar  navbar-light  bg-light navbar-expand-sm">
     <a class="ms-3 navbar-brand" href="#">{{cafeName ? cafeName : 'Menu app'}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isMenuCollapsed = !isMenuCollapsed"
