--- a/src/app/modules/cafe/menu-item/menu-item.component.html
+++ b/src/app/modules/cafe/menu-item/menu-item.component.html
@@ -1,5 +1,17 @@
-<div class="container">
-  <div class="menu-item">
-    <p>Menu item</p>
+<div class="menu-item">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="m-3">
+          <h4>{{getLocalizationVal(itemData.localizations)}}</h4>
+          <p>{{(itemData.basePrice |currency )}}</p>
+         </div>
+      </div>
+      <div class="col-6">
+        <div class="item-image">
+          <img [src]="itemData.imageUrl" alt="product image">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
