--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,24 @@
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
-html, body { height: 100%; }
+html, body { 
+    height: 100%;
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// .mat-mdc-tab .mdc-tab__text-label {
+//     color: rgb(110, 110, 110) !important;
+//   }
+
+// .mat-mdc-tab.mdc-tab--active .mdc-tab__text-label {
+//     color: rgb(194, 94, 94) !important;
+// }
+
+.mat-mdc-tab-group, .mat-mdc-tab-nav-bar {
+    --mat-tab-header-inactive-label-text-color: rgb(110, 110, 110) !important; 
+    --mat-tab-header-active-label-text-color:   #7b1fa2 !important;  
+    --mat-tab-header-inactive-hover-label-text-color: #7b1fa2 !important; 
+    --mat-tab-header-active-hover-label-text-color: #7b1fa2 !important; 
+}
+  
