--- a/src/app/modules/cafe/cafe/cafe.component.scss
+++ b/src/app/modules/cafe/cafe/cafe.component.scss
@@ -2,6 +2,12 @@
   display: block;
 }
 
+.cafe-container{
+  overflow-y: scroll; 
+  height: 90vh; 
+  padding-top: 0px !important;
+}
+
 .cover-image{
   width: 100%;
   height: 200px;
@@ -31,7 +37,7 @@
 }
 
 .item-group{
-  top: 50px;
+  top: -1px;
   position: sticky;
   background-color: rgb(255, 255, 255);
 }
